<resources>
    <string name="app_name">Room Management System</string>

    <!-- State -->
    <string name="logged_in_user">logged_in_user</string>

    <!-- Simple dialog -->
    <string name="dialog_confirm">Yes</string>
    <string name="dialog_decline">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_search">Search</string>

    <!-- Login -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>

    <!-- Navigation -->
    <string name="nav_open">Open Navigation</string>
    <string name="nav_close">Close Navigation</string>
    <string name="nav_app">App</string>
    <string name="nav_home">Home</string>
    <string name="nav_reservation">Reservation</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_settings">Settings</string>

    <!-- Logout -->
    <string name="assert_logout">Are you sure you want to logout?</string>

    <string name="hello_blank_fragment">Hello blank fragment!</string>

    <!-- Reservations -->
    <string name="reservations_get_rooms_failed">Get rooms failed</string>
    <string name="reservations_get_reservations_failed">Get reservations failed</string>
    <string name="reservations_choose_room">Choose room</string>
    <string name="reservations_invalid_room_number">Invalid room number</string>
    <string name="reservations_choose_begin_datetime">Choose begin date and time</string>
    <string name="reservations_invalid_begin_datetime">Invalid begin date or time</string>
    <string name="reservations_choose_end_datetime">Choose end date and time</string>
    <string name="reservations_invalid_end_datetime">Invalid end date or time</string>
    <string name="reservations_add_reservation">Add reservation</string>
    <string name="reservations_create_reservation_failed">Failed to create reservation</string>

    <!-- Reservation widget -->
    <string name="reservation_room">Room %d</string>
    <string name="reservation_time">%s - %s</string>

    <!-- Make Reservation Popup -->
    <string name="make_reservation_title">Make reservation</string>
    <string name="make_reservation_confirm">Make reservation</string>
    <string name="make_reservation_choose_room">Choose room</string>
    <string name="make_reservation_choose_begin_datetime">Choose begin date and time</string>
    <string name="make_reservation_choose_end_datetime">Choose end date and time</string>
</resources>