<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/reservationFragment"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/nav_reservation" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logoutFragment"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/nav_logout" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/nav_settings" />
    </group>
</menu>